<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mckracken.co.uk.mongolpandasapp.EventFragment">

    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:labelFor="@+id/title_text"/>

    <EditText
        android:id="@id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <TextView
        android:id="@+id/label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:labelFor="@+id/description_text"/>

    <EditText
        android:id="@id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:lines="5"/>

    <Button
        android:id="@+id/send_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_event"/>

</LinearLayout>
